--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
     <div id="historyPage" class="hidden">
       <div class="profile">
         <img class="avatar" id="historyUserPhoto" src="" alt="User">
+        <div>
+          <div id="historyUserName">Имя Фамилия</div>
         </div>
       </div>
       <div style="font-weight: bold; margin-bottom: 10px;">История транзакций</div>
