--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     }
     .container {
       padding: 16px;
+      padding-bottom: 80px;
     }
     .profile {
       display: flex;
@@ -31,7 +32,7 @@
       padding: 16px;
       margin-bottom: 20px;
     }
-    .invest-button, .confirm-invest-btn {
+    .invest-button {
       background-color: #00ff00;
       color: #000;
       border: none;
@@ -40,6 +41,7 @@
       border-radius: 8px;
       cursor: pointer;
       width: 100%;
+      margin-top: 20px;
     }
     .tariffs {
       display: flex;
@@ -60,7 +62,7 @@
     }
     .tariff.selected {
       background-color: #00ff00;
-      color: #000;
+      color: black;
     }
     .bottom-nav {
       position: fixed;
@@ -71,6 +73,7 @@
       display: flex;
       justify-content: space-around;
       padding: 12px 0;
+      border-top: 1px solid #333;
     }
     .bottom-nav button {
       background: none;
@@ -79,25 +82,28 @@
       font-size: 14px;
       cursor: pointer;
     }
+    .bottom-nav button.active {
+      color: #00ff00;
+      font-weight: bold;
+    }
     .hidden { display: none; }
-    .history-list { margin-top: 12px; }
-    .history-item {
-      background: #1a1a1a;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 8px;
+    .history-entry {
+      padding: 10px 0;
+      border-bottom: 1px solid #333;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="profile">
+    <!-- Профиль -->
+    <div class="profile" id="profileInfo">
       <img class="avatar" id="userPhoto" src="" alt="User">
       <div>
         <div id="userName">Имя Фамилия</div>
       </div>
     </div>
 
+    <!-- Главная -->
     <div id="homePage">
       <div class="balance">
         <div>Ваш баланс</div>
@@ -107,6 +113,7 @@
       <button class="invest-button" onclick="showTariffs()">Инвестировать</button>
     </div>
 
+    <!-- Тарифы -->
     <div id="tariffPage" class="hidden">
       <div style="color: #00ff00; font-size: 16px; font-weight: bold; margin-bottom: 12px;">Тарифы с 30% прибылью от 10 до 30 дней</div>
       <div class="tariffs" id="tariffList">
@@ -117,85 +124,97 @@
         <div class="tariff">600 TRX</div>
         <div class="tariff">800 TRX</div>
         <div class="tariff">900 TRX</div>
-        <div class="tariff">1,000 TRX</div>
-        <div class="tariff">1,500 TRX</div>
+        <div class="tariff">1000 TRX</div>
+        <div class="tariff">1500 TRX</div>
       </div>
-      <button id="confirmInvestBtn" class="confirm-invest-btn hidden" onclick="confirmInvestment()">Инвестировать</button>
+      <button class="invest-button hidden" id="confirmInvestmentBtn" onclick="confirmInvestment()">Инвестировать</button>
     </div>
 
+    <!-- Кошелек -->
     <div id="walletPage" class="hidden">
       <div style="text-align:center">Кошелек пока пуст</div>
     </div>
 
+    <!-- История -->
     <div id="historyPage" class="hidden">
-      <div class="profile">
-        <img class="avatar" id="historyUserPhoto" src="" alt="User">
-        <div>
-          <div id="historyUserName">Имя Фамилия</div>
+      <div id="historyContent">
+        <div class="profile">
+          <img class="avatar" id="historyPhoto" src="" alt="User">
+          <div>
+            <div id="historyName">Имя Фамилия</div>
+          </div>
         </div>
-      </div>
-      <div style="font-weight: bold; margin-bottom: 10px;">История транзакций</div>
-      <div id="historyList">
-        <div style="text-align:center">У вас пока нет транзакций в истории.<br>Совершите свою первую инвестицию.</div>
+        <div style="margin-top: 10px; font-weight: bold;">История транзакций</div>
+        <div id="transactionsList">
+          <div id="emptyHistory" style="margin-top: 20px;">У вас пока нет транзакций в истории. Совершите свою первую инвестицию.</div>
+        </div>
       </div>
     </div>
   </div>
 
   <div class="bottom-nav">
-    <button onclick="navigateTo('home')">Главная</button>
-    <button onclick="navigateTo('wallet')">Кошелек</button>
-    <button onclick="navigateTo('history')">История</button>
+    <button id="navHome" onclick="navigateTo('home')">Главная</button>
+    <button id="navWallet" onclick="navigateTo('wallet')">Кошелек</button>
+    <button id="navHistory" onclick="navigateTo('history')">История</button>
   </div>
 
   <script>
     let selectedTariff = null;
+    let user = null;
 
     function navigateTo(page) {
-      document.getElementById('homePage').classList.add('hidden');
-      document.getElementById('tariffPage').classList.add('hidden');
-      document.getElementById('walletPage').classList.add('hidden');
-      document.getElementById('historyPage').classList.add('hidden');
-      if (page === 'home') document.getElementById('homePage').classList.remove('hidden');
-      if (page === 'wallet') document.getElementById('walletPage').classList.remove('hidden');
-      if (page === 'history') document.getElementById('historyPage').classList.remove('hidden');
+      const pages = ['home', 'tariff', 'wallet', 'history'];
+      pages.forEach(p => document.getElementById(p + 'Page').classList.add('hidden'));
+      document.getElementById(page + 'Page').classList.remove('hidden');
+
+      document.querySelectorAll(".bottom-nav button").forEach(btn => btn.classList.remove("active"));
+      document.getElementById('nav' + page.charAt(0).toUpperCase() + page.slice(1)).classList.add("active");
     }
 
     function showTariffs() {
       navigateTo('tariff');
-      document.getElementById('tariffPage').classList.remove('hidden');
     }
 
-    function confirmInvestment() {
-      if (!selectedTariff) return;
-      const historyList = document.getElementById('historyList');
-      historyList.innerHTML = '';
-      const newItem = document.createElement('div');
-      newItem.className = 'history-item';
-      newItem.textContent = `-${selectedTariff}`;
-      historyList.appendChild(newItem);
-      navigateTo('history');
-    }
-
+    // Обработка выбора тарифа
     document.querySelectorAll('.tariff').forEach(tariff => {
       tariff.addEventListener('click', () => {
         document.querySelectorAll('.tariff').forEach(t => t.classList.remove('selected'));
         tariff.classList.add('selected');
         selectedTariff = tariff.textContent;
-        document.getElementById('confirmInvestBtn').classList.remove('hidden');
+        document.getElementById('confirmInvestmentBtn').classList.remove('hidden');
       });
     });
 
+    function confirmInvestment() {
+      if (!selectedTariff) return;
+
+      const list = document.getElementById('transactionsList');
+      const empty = document.getElementById('emptyHistory');
+      if (empty) empty.remove();
+
+      const entry = document.createElement('div');
+      entry.className = 'history-entry';
+      entry.textContent = `- ${selectedTariff}`;
+      list.appendChild(entry);
+
+      navigateTo('history');
+    }
+
+    // Telegram WebApp user data
     const tg = window.Telegram?.WebApp;
     if (tg) {
       tg.expand();
-      const user = tg.initDataUnsafe?.user;
+      user = tg.initDataUnsafe?.user;
       if (user) {
-        const fullName = `${user.first_name || ''} ${user.last_name || ''}`.trim();
-        document.getElementById("userName").textContent = fullName;
-        document.getElementById("historyUserName").textContent = fullName;
-        if (user.photo_url) {
-          document.getElementById("userPhoto").src = user.photo_url;
-          document.getElementById("historyUserPhoto").src = user.photo_url;
+        const name = `${user.first_name || ''} ${user.last_name || ''}`.trim();
+        const photo = user.photo_url;
+
+        document.getElementById("userName").textContent = name;
+        document.getElementById("historyName").textContent = name;
+
+        if (photo) {
+          document.getElementById("userPhoto").src = photo;
+          document.getElementById("historyPhoto").src = photo;
         }
       }
     }
