--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     .container {
       padding: 16px;
-      padding-bottom: 80px;
+      padding-bottom: 70px;
     }
     .profile {
       display: flex;
@@ -32,7 +32,7 @@
       padding: 16px;
       margin-bottom: 20px;
     }
-    .invest-button, .confirm-invest {
+    .invest-button {
       background-color: #00ff00;
       color: #000;
       border: none;
@@ -82,10 +82,11 @@
       cursor: pointer;
     }
     .hidden { display: none; }
-    .history-entry {
+
+    .history-item {
       background-color: #1a1a1a;
-      border-radius: 8px;
       padding: 10px;
+      border-radius: 10px;
       margin-bottom: 10px;
     }
   </style>
@@ -102,26 +103,17 @@
     <div id="homePage">
       <div class="balance">
         <div>Ваш баланс</div>
-        <div style="margin-top: 6px; font-size: 18px; font-weight: bold;">0.00 TRX</div>
-        <div>≈$0.00</div>
+        <div style="margin-top: 6px; font-size: 18px; font-weight: bold;" id="trxBalance">0.00 TRX</div>
+        <div id="usdBalance">≈$0.00</div>
       </div>
+      <button class="invest-button" onclick="addFunds()">Пополнить +100 TRX</button>
       <button class="invest-button" onclick="showTariffs()">Инвестировать</button>
     </div>
 
     <div id="tariffPage" class="hidden">
       <div style="color: #00ff00; font-size: 16px; font-weight: bold; margin-bottom: 12px;">Тарифы с 30% прибылью от 10 до 30 дней</div>
-      <div class="tariffs" id="tariffList">
-        <div class="tariff">200 TRX</div>
-        <div class="tariff">300 TRX</div>
-        <div class="tariff">400 TRX</div>
-        <div class="tariff">500 TRX</div>
-        <div class="tariff">600 TRX</div>
-        <div class="tariff">800 TRX</div>
-        <div class="tariff">900 TRX</div>
-        <div class="tariff">1,000 TRX</div>
-        <div class="tariff">1,500 TRX</div>
-      </div>
-      <button id="confirmInvest" class="confirm-invest hidden" onclick="confirmInvestment()">Инвестировать</button>
+      <div class="tariffs" id="tariffList"></div>
+      <button class="invest-button hidden" id="confirmInvestment" onclick="confirmInvestment()">Инвестировать</button>
     </div>
 
     <div id="walletPage" class="hidden">
@@ -140,8 +132,19 @@
   </div>
 
   <script>
+    let balance = 0;
     let selectedTariff = null;
-    let userFullName = 'Имя Фамилия';
+    let history = [];
+
+    function updateBalanceDisplay() {
+      document.getElementById("trxBalance").textContent = `${balance.toFixed(2)} TRX`;
+      document.getElementById("usdBalance").textContent = `≈$${(balance * 0.11).toFixed(2)}`;
+    }
+
+    function addFunds() {
+      balance += 100;
+      updateBalanceDisplay();
+    }
 
     function navigateTo(page) {
       document.getElementById('homePage').classList.add('hidden');
@@ -151,7 +154,10 @@
 
       if (page === 'home') document.getElementById('homePage').classList.remove('hidden');
       if (page === 'wallet') document.getElementById('walletPage').classList.remove('hidden');
-      if (page === 'history') document.getElementById('historyPage').classList.remove('hidden');
+      if (page === 'history') {
+        document.getElementById('historyPage').classList.remove('hidden');
+        renderHistory();
+      }
     }
 
     function showTariffs() {
@@ -160,37 +166,58 @@
     }
 
     function confirmInvestment() {
-      if (selectedTariff) {
-        const historyList = document.getElementById("historyList");
-        const entry = document.createElement("div");
-        entry.className = "history-entry";
-        entry.textContent = `-${selectedTariff} от ${userFullName}`;
-        historyList.prepend(entry);
+      if (selectedTariff !== null && balance >= selectedTariff) {
+        balance -= selectedTariff;
+        updateBalanceDisplay();
+        history.push(`- ${selectedTariff} TRX`);
         navigateTo('history');
         selectedTariff = null;
+        document.getElementById('confirmInvestment').classList.add('hidden');
         document.querySelectorAll('.tariff').forEach(t => t.classList.remove('selected'));
-        document.getElementById('confirmInvest').classList.add('hidden');
       }
     }
 
-    document.querySelectorAll('.tariff').forEach(tariff => {
-      tariff.addEventListener('click', () => {
-        document.querySelectorAll('.tariff').forEach(t => t.classList.remove('selected'));
-        tariff.classList.add('selected');
-        selectedTariff = tariff.textContent;
-        document.getElementById('confirmInvest').classList.remove('hidden');
+    function renderHistory() {
+      const list = document.getElementById("historyList");
+      list.innerHTML = "";
+      history.forEach(item => {
+        const div = document.createElement("div");
+        div.className = "history-item";
+        div.textContent = item;
+        list.appendChild(div);
       });
-    });
+    }
 
-    window.addEventListener("DOMContentLoaded", () => {
+    const tariffs = [200, 300, 400, 500, 600, 800, 900, 1000, 1500];
+
+    document.addEventListener("DOMContentLoaded", () => {
+      updateBalanceDisplay();
+
+      const list = document.getElementById("tariffList");
+      tariffs.forEach(tariff => {
+        const div = document.createElement("div");
+        div.className = "tariff";
+        div.textContent = `${tariff} TRX`;
+        div.onclick = () => {
+          document.querySelectorAll('.tariff').forEach(t => t.classList.remove('selected'));
+          div.classList.add('selected');
+          selectedTariff = tariff;
+          document.getElementById("confirmInvestment").classList.remove("hidden");
+        };
+        list.appendChild(div);
+      });
+
+      // Telegram WebApp user info
       const tg = window.Telegram?.WebApp;
       if (tg) {
         tg.expand();
         const user = tg.initDataUnsafe?.user;
         if (user) {
-          userFullName = `${user.first_name || ""} ${user.last_name || ""}`.trim();
-          document.getElementById("userName").textContent = userFullName;
-          if (user.photo_url) document.getElementById("userPhoto").src = user.photo_url;
+          const fullName = `${user.first_name || ''} ${user.last_name || ''}`.trim();
+          document.getElementById("userName").textContent = fullName;
+          if (user.photo_url) {
+            document.getElementById("userPhoto").src = user.photo_url;
+          }
         }
       }
     });
