--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-</head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TRX App</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
     body {
       margin: 0;
@@ -83,6 +82,9 @@
       font-size: 14px;
       cursor: pointer;
     }
+    .bottom-nav button.active {
+      border-bottom: 2px solid #00ff00;
+    }
     .hidden { display: none; }
 
     .history-item {
@@ -109,7 +111,6 @@
         <div style="margin-top: 6px; font-size: 18px; font-weight: bold;" id="trxBalance">0.00 TRX</div>
         <div id="usdBalance">≈$0.00</div>
       </div>
-      <button class="invest-button" onclick="addFunds()">Пополнить +100 TRX</button>
       <button class="invest-button" onclick="showTariffs()">Инвестировать</button>
     </div>
 
@@ -129,9 +130,9 @@
   </div>
 
   <div class="bottom-nav">
-    <button onclick="navigateTo('home')">Главная</button>
-    <button onclick="navigateTo('wallet')">Кошелек</button>
-    <button onclick="navigateTo('history')">История</button>
+    <button id="navHome" onclick="navigateTo('home')">Главная</button>
+    <button id="navWallet" onclick="navigateTo('wallet')">Кошелек</button>
+    <button id="navHistory" onclick="navigateTo('history')">История</button>
   </div>
 
   <script>
@@ -144,21 +145,27 @@
       document.getElementById("usdBalance").textContent = `≈$${(balance * 0.11).toFixed(2)}`;
     }
 
-    function addFunds() {
-      balance += 100;
-      updateBalanceDisplay();
-    }
-
     function navigateTo(page) {
       document.getElementById('homePage').classList.add('hidden');
       document.getElementById('tariffPage').classList.add('hidden');
       document.getElementById('walletPage').classList.add('hidden');
       document.getElementById('historyPage').classList.add('hidden');
 
-      if (page === 'home') document.getElementById('homePage').classList.remove('hidden');
-      if (page === 'wallet') document.getElementById('walletPage').classList.remove('hidden');
+      document.getElementById('navHome').classList.remove('active');
+      document.getElementById('navWallet').classList.remove('active');
+      document.getElementById('navHistory').classList.remove('active');
+
+      if (page === 'home') {
+        document.getElementById('homePage').classList.remove('hidden');
+        document.getElementById('navHome').classList.add('active');
+      }
+      if (page === 'wallet') {
+        document.getElementById('walletPage').classList.remove('hidden');
+        document.getElementById('navWallet').classList.add('active');
+      }
       if (page === 'history') {
         document.getElementById('historyPage').classList.remove('hidden');
+        document.getElementById('navHistory').classList.add('active');
         renderHistory();
       }
     }
@@ -210,38 +217,34 @@
         list.appendChild(div);
       });
 
-      // Telegram WebApp user info
-     <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    updateBalanceDisplay();
+      // Получение данных Telegram WebApp
+      const debug = document.getElementById("debug");
+      const tg = window.Telegram?.WebApp;
 
-    const debug = document.getElementById("debug");
-    const tg = window.Telegram?.WebApp;
+      if (!tg) {
+        debug.textContent = "❌ Telegram WebApp не найден. Вы точно открыли через Telegram?";
+        return;
+      }
 
-    if (!tg) {
-      debug.textContent = "❌ Telegram WebApp не найден. Вы точно открыли через Telegram?";
-      return;
-    }
+      tg.ready();
+      tg.expand();
 
-    tg.ready();
-    tg.expand();
+      const user = tg.initDataUnsafe?.user;
 
-    const user = tg.initDataUnsafe?.user;
+      if (!user) {
+        debug.textContent = "❌ Данные пользователя не получены.\nПроверьте, что вы открыли приложение через Telegram.";
+        return;
+      }
 
-    if (!user) {
-      debug.textContent = "❌ Данные пользователя не получены.\nПроверьте, что вы открыли приложение через Telegram.";
-      return;
-    }
+      debug.textContent = `✅ Данные получены:\n` + JSON.stringify(user, null, 2);
 
-    debug.textContent = `✅ Данные получены:\n` + JSON.stringify(user, null, 2);
+      document.getElementById("userName").textContent =
+        `${user.first_name || ''} ${user.last_name || ''}`.trim();
 
-    document.getElementById("userName").textContent =
-      `${user.first_name || ''} ${user.last_name || ''}`.trim();
-
-    if (user.photo_url) {
-      document.getElementById("userPhoto").src = user.photo_url;
-    }
-  });
+      if (user.photo_url) {
+        document.getElementById("userPhoto").src = user.photo_url;
+      }
+    });
   </script>
 </body>
 </html>
