--- a/index.html
+++ b/index.html
@@ -1,238 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TRX App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TRX Mini App</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #0e0e0e;
+      background-color: #111;
       color: white;
     }
-    .container {
-      padding: 16px;
-      padding-bottom: 70px;
-    }
-    .profile {
+    .header {
       display: flex;
       align-items: center;
-      margin-bottom: 20px;
+      padding: 10px;
+      background-color: #1c1c1c;
     }
     .avatar {
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
-      margin-right: 12px;
+      margin-right: 10px;
     }
-    .balance {
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      padding: 16px;
+    .content {
+      padding: 20px;
+    }
+    .card {
+      background-color: #1c1c1c;
+      padding: 15px;
+      border-radius: 10px;
       margin-bottom: 20px;
     }
     .invest-button {
-      background-color: #00ff00;
-      color: #000;
-      border: none;
-      padding: 12px 20px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
+      background-color: lime;
+      color: black;
+      padding: 12px;
       width: 100%;
-      margin-top: 10px;
-    }
-    .tariffs {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-      margin-top: 20px;
-    }
-    .tariff {
-      border: 2px solid #00ff00;
-      color: #00ff00;
-      padding: 16px;
-      width: 100px;
-      text-align: center;
-      border-radius: 12px;
-      font-weight: bold;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
       cursor: pointer;
-    }
-    .tariff.selected {
-      background-color: #00ff00;
-      color: #000;
     }
     .bottom-nav {
       position: fixed;
       bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: #1a1a1a;
+      width: 100%;
+      background-color: #1c1c1c;
       display: flex;
       justify-content: space-around;
-      padding: 12px 0;
+      padding: 10px 0;
     }
     .bottom-nav button {
       background: none;
       border: none;
       color: white;
       font-size: 14px;
-      cursor: pointer;
     }
-    .bottom-nav button.active {
-      color: #00ff00;
-      font-weight: bold;
-    }
-    .hidden { display: none; }
-
-    .history-item {
-      background-color: #1a1a1a;
-      padding: 10px;
-      border-radius: 10px;
-      margin-bottom: 10px;
+    .hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="profile">
-      <img class="avatar" id="userPhoto" src="" alt="User">
-      <div>
-        <div id="userName">Имя Фамилия</div>
-      </div>
-    </div>
+  <div class="header">
+    <img src="https://via.placeholder.com/40" alt="avatar" class="avatar" />
+    <span>Emir Emirsinov</span>
+  </div>
 
-    <div id="homePage">
-      <div class="balance">
-        <div>Ваш баланс</div>
-        <div style="margin-top: 6px; font-size: 18px; font-weight: bold;" id="trxBalance">0.00 TRX</div>
-        <div id="usdBalance">≈$0.00</div>
-      </div>
-      <button class="invest-button" onclick="showTariffs()">Инвестировать</button>
+  <div id="homePage" class="content">
+    <div class="card">
+      <div>Ваш баланс</div>
+      <div><strong>0.00 TRX</strong></div>
+      <div>≈$0.00</div>
     </div>
+    <button class="invest-button">Инвестировать</button>
+  </div>
 
-    <div id="tariffPage" class="hidden">
-      <div style="color: #00ff00; font-size: 16px; font-weight: bold; margin-bottom: 12px;">Тарифы с 30% прибылью от 10 до 30 дней</div>
-      <div class="tariffs" id="tariffList"></div>
-      <button class="invest-button hidden" id="confirmInvestment" onclick="confirmInvestment()">Инвестировать</button>
+  <div id="walletPage" class="content hidden">
+    <button class="invest-button" onclick="createWallet()">Создать кошелек</button>
+    <div id="walletInfo" class="hidden">
+      <div style="margin-top: 10px;">Баланс TRX: <span id="walletBalance">0.00</span></div>
+      <div style="margin-top: 6px;">Адрес вашего кошелька TRX: <span id="walletAddress"></span></div>
     </div>
+  </div>
 
-    <div id="walletPage" class="hidden">
-      <div style="text-align:center">Кошелек пока пуст</div>
-    </div>
+  <div id="historyPage" class="content hidden">
+    История пока пуста
+  </div>
 
-    <div id="historyPage" class="hidden">
-      <div id="historyList"></div>
-    </div>
+  <div id="mapPage" class="content hidden">
+    Карта пока недоступна
   </div>
 
   <div class="bottom-nav">
-    <button id="tabHome" onclick="navigateTo('home')">Главная</button>
-    <button id="tabWallet" onclick="navigateTo('wallet')">Кошелек</button>
-    <button id="tabHistory" onclick="navigateTo('history')">История</button>
+    <button onclick="navigateTo('home')">Главная</button>
+    <button onclick="navigateTo('wallet')">Кошелек</button>
+    <button onclick="navigateTo('history')">История</button>
+    <button onclick="navigateTo('map')">Карта</button>
   </div>
 
   <script>
-    let balance = 0;
-    let selectedTariff = null;
-    let history = [];
-
-    function updateBalanceDisplay() {
-      document.getElementById("trxBalance").textContent = `${balance.toFixed(2)} TRX`;
-      document.getElementById("usdBalance").textContent = `≈$${(balance * 0.11).toFixed(2)}`;
-    }
-
     function navigateTo(page) {
-      document.getElementById('homePage').classList.add('hidden');
-      document.getElementById('tariffPage').classList.add('hidden');
-      document.getElementById('walletPage').classList.add('hidden');
-      document.getElementById('historyPage').classList.add('hidden');
-
-      document.getElementById('tabHome').classList.remove('active');
-      document.getElementById('tabWallet').classList.remove('active');
-      document.getElementById('tabHistory').classList.remove('active');
-
-      if (page === 'home') {
-        document.getElementById('homePage').classList.remove('hidden');
-        document.getElementById('tabHome').classList.add('active');
-      }
-      if (page === 'wallet') {
-        document.getElementById('walletPage').classList.remove('hidden');
-        document.getElementById('tabWallet').classList.add('active');
-      }
-      if (page === 'history') {
-        document.getElementById('historyPage').classList.remove('hidden');
-        document.getElementById('tabHistory').classList.add('active');
-        renderHistory();
-      }
+      const pages = ['homePage', 'walletPage', 'historyPage', 'mapPage'];
+      pages.forEach(id => document.getElementById(id).classList.add('hidden'));
+      document.getElementById(page + 'Page').classList.remove('hidden');
     }
 
-    function showTariffs() {
-      document.getElementById('homePage').classList.add('hidden');
-      document.getElementById('tariffPage').classList.remove('hidden');
-    }
+    function createWallet() {
+      const address = "T" + Math.random().toString(36).substring(2, 10).toUpperCase();
+      const privateKey = Math.random().toString(36).substring(2) + Math.random().toString(36).substring(2);
 
-    function confirmInvestment() {
-      if (selectedTariff !== null && balance >= selectedTariff) {
-        balance -= selectedTariff;
-        updateBalanceDisplay();
-        history.push(`- ${selectedTariff} TRX`);
-        navigateTo('history');
-        selectedTariff = null;
-        document.getElementById('confirmInvestment').classList.add('hidden');
-        document.querySelectorAll('.tariff').forEach(t => t.classList.remove('selected'));
+      document.getElementById("walletInfo").classList.remove("hidden");
+      document.getElementById("walletAddress").textContent = address;
+      document.getElementById("walletBalance").textContent = "0.00";
+
+      const userId = window.Telegram.WebApp.initDataUnsafe?.user?.id;
+      const botToken = '<YOUR_BOT_TOKEN>'; // ЗАМЕНИТЬ
+
+      if (userId && botToken) {
+        fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+          method: "POST",
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            chat_id: userId,
+            text: `⚠️ НИКОМУ НЕ ПЕРЕДАВАЙТЕ эти данные!\n\n🔑 Приватный ключ:\n${privateKey}\n(⬆️копируется нажатием⬆️)\n\n💼 Адрес:\n${address}\n(⬆️копируется нажатием⬆️)\n\nИнструкция по созданию кошелька:\n1️⃣Скачайте приложение TrustWallet в App Store или Google Play;\n2️⃣Скопируйте 🔑 Приватный ключ и импортируйте его в Приложение TrustWallet;\n3️⃣Создайте надёжный пароль и никому не передавайте личную информацию;\n4️⃣Ваш кошелек готов✅`
+          })
+        });
+      } else {
+        alert("Ошибка: пользователь или токен бота не определены.");
       }
     }
-
-    function renderHistory() {
-      const list = document.getElementById("historyList");
-      list.innerHTML = "";
-      history.forEach(item => {
-        const div = document.createElement("div");
-        div.className = "history-item";
-        div.textContent = item;
-        list.appendChild(div);
-      });
-    }
-
-    const tariffs = [200, 300, 400, 500, 600, 800, 900, 1000, 1500];
-
-    document.addEventListener("DOMContentLoaded", () => {
-      updateBalanceDisplay();
-
-      const list = document.getElementById("tariffList");
-      tariffs.forEach(tariff => {
-        const div = document.createElement("div");
-        div.className = "tariff";
-        div.textContent = `${tariff} TRX`;
-        div.onclick = () => {
-          document.querySelectorAll('.tariff').forEach(t => t.classList.remove('selected'));
-          div.classList.add('selected');
-          selectedTariff = tariff;
-          document.getElementById("confirmInvestment").classList.remove("hidden");
-        };
-        list.appendChild(div);
-      });
-
-      const tg = window.Telegram?.WebApp;
-      if (!tg) return;
-
-      tg.ready();
-      tg.expand();
-
-      const user = tg.initDataUnsafe?.user;
-      if (!user) return;
-
-      document.getElementById("userName").textContent =
-        `${user.first_name || ''} ${user.last_name || ''}`.trim();
-
-      if (user.photo_url) {
-        document.getElementById("userPhoto").src = user.photo_url;
-      }
-    });
   </script>
 </body>
 </html>
